# aliexpress-review-scraper

./: .gitignore  README.md  action.md  categories.json  drizzle.config.ts  main.py  middlewares.py  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  settings.py  vitest.config.ts
app/: app.vue
app/components/parts/: AddOptions.vue
app/components/visits/: CarLookup.vue  ChargeSelector.vue  CustomerForm.vue  JobSelector.vue
app/layouts/: auth.vue  default.vue
app/locales/: bg.json  de.json  en.json  fr.json  hu.json  nl.json  pl.json  ro.json  tr.json
app/middleware/: auth.global.ts  login.ts  reset-password.ts
app/pages/: forgot-password.vue  index.vue  login.vue  register.vue  reset-password.vue
app/pages/dtc/: index.vue
drizzle/migrations/: 0000_faithful_wallow.sql
i18n/locales/: bg.json  de.json  en.json  fr.json  hu.json  nl.json  pl.json  ro.json  tr.json
server/db/: index.ts  schema.ts
server/utils/: auth.ts  mailer.ts  password.ts
spiders/: category_crawler.py  product_id_spider.py
tests/: auth-account-delete.test.ts  auth-forgot-password.test.ts  auth-login.test.ts  auth-logout.test.ts  auth-me.test.ts  auth-register.test.ts  auth-reset-password.test.ts  cars-lookup.test.ts  charges.test.ts  customers.test.ts  dtc.test.ts  jobs-available.test.ts  mailer.test.ts  middleware-and-routes.test.ts  parts-parse-email.test.ts  parts.test.ts  password.test.ts  settings.test.ts  subscribe-checkout.test.ts  subscribe.test.ts  visits-delete.test.ts  visits-get.test.ts  visits-id-get.test.ts  visits-post.test.ts
(+53 files in other folders)
