[project]
name = "aliexpress-review-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "scrapy (>=2.14.2,<3.0.0)",
    "scrapy-user-agents (>=0.1.1,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
